--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8" />
+  <!-- three.jsを読み込む -->
+  <script src="three.js"></script>
+  <!-- index.jsを読み込む -->
+  <script src="index.js"></script>
+</head>
 <body>
-<h1>Hello World!!</h1>
+  <canvas id="myCanvas"></canvas>
 </body>
 </html>
