--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- three.jsを読み込む -->
   <script src="three.js"></script>
+  <script type="text/javascript" src="src/loaders/ColladaLoader.js"></script>
+  <script type="text/javascript" src="src/loaders/STLLoader.js"></script>
+  
   <!-- index.jsを読み込む -->
-  <script src="index.js"></script>
+
+  <script src="index_1.js"></script>
+ <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+   </style>
+
 </head>
 <body>
   <canvas id="myCanvas"></canvas>
